--- a/ApiEasier.Frontend/documentation/injectables/ApiHubServiceService.html
+++ b/ApiEasier.Frontend/documentation/injectables/ApiHubServiceService.html
@@ -392,7 +392,7 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable, Input, NgZone } from &#x27;@angular/core&#x27;;
 import * as signalR from &#x27;@microsoft/signalr&#x27;;
 import { BehaviorSubject, Observable, Subject } from &#x27;rxjs&#x27;;
-import { apiServiceShortStructure } from &#x27;./service-structure-api&#x27;;
+import { apiServiceShortStructure } from &quot;../interfaces/apiServiceShortStructure&quot;;
 
 @Injectable({
   providedIn: &#x27;root&#x27;
