--- a/ApiEasier.Frontend/documentation/injectables/ApiService.html
+++ b/ApiEasier.Frontend/documentation/injectables/ApiService.html
@@ -198,7 +198,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/services/api-service.service.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/services/api-service.service.ts:15</a></div>
                             </td>
                         </tr>
 
@@ -285,8 +285,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="39"
-                                    class="link-to-prism">src/app/services/api-service.service.ts:39</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="37"
+                                    class="link-to-prism">src/app/services/api-service.service.ts:37</a></div>
                         </td>
                     </tr>
 
@@ -352,8 +352,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="47"
-                                    class="link-to-prism">src/app/services/api-service.service.ts:47</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="45"
+                                    class="link-to-prism">src/app/services/api-service.service.ts:45</a></div>
                         </td>
                     </tr>
 
@@ -419,8 +419,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="65"
-                                    class="link-to-prism">src/app/services/api-service.service.ts:65</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="63"
+                                    class="link-to-prism">src/app/services/api-service.service.ts:63</a></div>
                         </td>
                     </tr>
 
@@ -486,8 +486,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="25"
-                                    class="link-to-prism">src/app/services/api-service.service.ts:25</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="23"
+                                    class="link-to-prism">src/app/services/api-service.service.ts:23</a></div>
                         </td>
                     </tr>
 
@@ -523,8 +523,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="31"
-                                    class="link-to-prism">src/app/services/api-service.service.ts:31</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="29"
+                                    class="link-to-prism">src/app/services/api-service.service.ts:29</a></div>
                         </td>
                     </tr>
 
@@ -592,8 +592,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="87"
-                                    class="link-to-prism">src/app/services/api-service.service.ts:87</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="85"
+                                    class="link-to-prism">src/app/services/api-service.service.ts:85</a></div>
                         </td>
                     </tr>
 
@@ -659,8 +659,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="53"
-                                    class="link-to-prism">src/app/services/api-service.service.ts:53</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="51"
+                                    class="link-to-prism">src/app/services/api-service.service.ts:51</a></div>
                         </td>
                     </tr>
 
@@ -738,8 +738,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="73"
-                                    class="link-to-prism">src/app/services/api-service.service.ts:73</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="71"
+                                    class="link-to-prism">src/app/services/api-service.service.ts:71</a></div>
                         </td>
                     </tr>
 
@@ -822,7 +822,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/services/api-service.service.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/services/api-service.service.ts:15</a></div>
                         </td>
                     </tr>
 
@@ -841,10 +841,8 @@ import { Observable, throwError } from &#x27;rxjs&#x27;;
 import { catchError } from &#x27;rxjs/operators&#x27;;
 import { Router } from &#x27;@angular/router&#x27;;
 import { TuiAlertService } from &#x27;@taiga-ui/core&#x27;;
-import {
-  apiServiceShortStructure,
-  ApiServiceStructure,
-} from &#x27;./service-structure-api&#x27;;
+import { ApiServiceStructure } from &quot;../interfaces/ApiServiceStructure&quot;;
+import { apiServiceShortStructure } from &quot;../interfaces/apiServiceShortStructure&quot;;
 import { ErrorHandlerService } from &#x27;./error-handler.service&#x27;;
 
 @Injectable({
