--- a/ApiEasier.Frontend/documentation/injectables/EntityRepositoryService.html
+++ b/ApiEasier.Frontend/documentation/injectables/EntityRepositoryService.html
@@ -714,7 +714,7 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable } from &#x27;@angular/core&#x27;;
 import { EntityService } from &#x27;../services/entity-service.service&#x27;;
 import { Observable } from &#x27;rxjs&#x27;;
-import { Entity } from &#x27;../services/service-structure-api&#x27;;
+import { Entity } from &quot;../interfaces/Entity&quot;;
 
 @Injectable({
   providedIn: &#x27;root&#x27;
