--- a/ApiEasier.Frontend/documentation/injectables/EntityService.html
+++ b/ApiEasier.Frontend/documentation/injectables/EntityService.html
@@ -198,7 +198,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/services/entity-service.service.ts:18</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/services/entity-service.service.ts:16</a></div>
                             </td>
                         </tr>
 
@@ -285,8 +285,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="38"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:38</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="36"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:36</a></div>
                         </td>
                     </tr>
 
@@ -364,8 +364,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="57"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:57</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="55"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:55</a></div>
                         </td>
                     </tr>
 
@@ -443,8 +443,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="79"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:79</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="77"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:77</a></div>
                         </td>
                     </tr>
 
@@ -480,8 +480,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="32"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:32</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="30"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:30</a></div>
                         </td>
                     </tr>
 
@@ -559,8 +559,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="26"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:26</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="24"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:24</a></div>
                         </td>
                     </tr>
 
@@ -628,8 +628,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="85"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:85</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="83"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:83</a></div>
                         </td>
                     </tr>
 
@@ -695,8 +695,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="44"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:44</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="42"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:42</a></div>
                         </td>
                     </tr>
 
@@ -786,8 +786,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="66"
-                                    class="link-to-prism">src/app/services/entity-service.service.ts:66</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="64"
+                                    class="link-to-prism">src/app/services/entity-service.service.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -882,7 +882,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/services/entity-service.service.ts:18</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/services/entity-service.service.ts:16</a></div>
                         </td>
                     </tr>
 
@@ -900,11 +900,9 @@ import { Injectable } from &#x27;@angular/core&#x27;;
 import { Observable, throwError } from &#x27;rxjs&#x27;;
 import { catchError } from &#x27;rxjs/operators&#x27;;
 import { Router } from &#x27;@angular/router&#x27;;
-import {
-  apiServiceShortStructure,
-  ApiServiceStructure,
-  Entity,
-} from &#x27;./service-structure-api&#x27;;
+import { Entity } from &quot;../interfaces/Entity&quot;;
+import { ApiServiceStructure } from &quot;../interfaces/ApiServiceStructure&quot;;
+import { apiServiceShortStructure } from &quot;../interfaces/apiServiceShortStructure&quot;;
 import { TuiAlertService } from &#x27;@taiga-ui/core&#x27;;
 import { ErrorHandlerService } from &#x27;./error-handler.service&#x27;;
 
