--- a/ApiEasier.Frontend/documentation/interfaces/apiServiceShortStructure.html
+++ b/ApiEasier.Frontend/documentation/interfaces/apiServiceShortStructure.html
@@ -122,7 +122,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/services/service-structure-api.ts</code>
+            <code>src/app/interfaces/apiServiceShortStructure.ts</code>
         </p>
 
 
@@ -273,37 +273,12 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface Endpoint {
-  route: string;
-  type: string;
-  isActive: boolean;
-}
-
-export interface Entity {
-  name: string;
-  isActive: boolean;
-  structure: any;
-  endpoints: Endpoint[];
-}
-
-export interface ApiServiceStructure {
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface apiServiceShortStructure {
   name: string;
   isActive: boolean;
   description: string;
-  entities: Entity[];
 }
-
-export interface apiServiceShortStructure {
-  name: string;
-  isActive : boolean;
-  description: string;
-}
-
-export interface EntityShort {
-  name: string;
-  isActive: boolean;
-  structure: string;
-}</code></pre>
+</code></pre>
     </div>
 </div>
 
