--- a/ApiEasier.Frontend/documentation/injectables/ApiServiceRepositoryService.html
+++ b/ApiEasier.Frontend/documentation/injectables/ApiServiceRepositoryService.html
@@ -179,7 +179,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/repositories/api-service-repository.service.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/repositories/api-service-repository.service.ts:10</a></div>
                             </td>
                         </tr>
 
@@ -242,8 +242,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="23"
-                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:23</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="21"
+                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:21</a></div>
                         </td>
                     </tr>
 
@@ -309,8 +309,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="29"
-                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:29</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="27"
+                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:27</a></div>
                         </td>
                     </tr>
 
@@ -376,8 +376,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="40"
-                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:40</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="38"
+                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:38</a></div>
                         </td>
                     </tr>
 
@@ -443,8 +443,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="15"
-                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:15</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="13"
+                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:13</a></div>
                         </td>
                     </tr>
 
@@ -480,8 +480,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="19"
-                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:19</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="17"
+                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:17</a></div>
                         </td>
                     </tr>
 
@@ -547,8 +547,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="33"
-                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:33</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="31"
+                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:31</a></div>
                         </td>
                     </tr>
 
@@ -626,8 +626,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="44"
-                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:44</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="42"
+                                    class="link-to-prism">src/app/repositories/api-service-repository.service.ts:42</a></div>
                         </td>
                     </tr>
 
@@ -693,10 +693,8 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable } from &#x27;@angular/core&#x27;;
 import { Observable } from &#x27;rxjs&#x27;;
-import {
-  apiServiceShortStructure,
-  ApiServiceStructure,
-} from &#x27;../services/service-structure-api&#x27;;
+import { ApiServiceStructure } from &quot;../interfaces/ApiServiceStructure&quot;;
+import { apiServiceShortStructure } from &quot;../interfaces/apiServiceShortStructure&quot;;
 import { ApiService } from &#x27;../services/api-service.service&#x27;;
 
 @Injectable({
