--- a/ApiEasier.Frontend/documentation/injectables/EndpointRepositoryService.html
+++ b/ApiEasier.Frontend/documentation/injectables/EndpointRepositoryService.html
@@ -785,7 +785,7 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable } from &#x27;@angular/core&#x27;;
 import { EndpointService as EndpointService } from &#x27;../services/endpoint-service.service&#x27;;
-import { Endpoint as Endpoint } from &#x27;../services/service-structure-api&#x27;;
+import { Endpoint as Endpoint } from &quot;../interfaces/Endpoint&quot;;
 import { Observable } from &#x27;rxjs&#x27;;
 
 @Injectable({
