--- a/ApiEasier.Frontend/documentation/injectables/EndpointService.html
+++ b/ApiEasier.Frontend/documentation/injectables/EndpointService.html
@@ -932,7 +932,7 @@ import { Injectable } from &#x27;@angular/core&#x27;;
 import { Observable, throwError } from &#x27;rxjs&#x27;;
 import { catchError } from &#x27;rxjs/operators&#x27;;
 import { Router } from &#x27;@angular/router&#x27;;
-import { Endpoint } from &#x27;./service-structure-api&#x27;;
+import { Endpoint } from &quot;../interfaces/Endpoint&quot;;
 import { TuiAlertService } from &#x27;@taiga-ui/core&#x27;;
 import { ErrorHandlerService } from &#x27;./error-handler.service&#x27;;
 
