--- a/ApiEasier.Frontend/documentation/interfaces/ApiServiceStructure.html
+++ b/ApiEasier.Frontend/documentation/interfaces/ApiServiceStructure.html
@@ -122,7 +122,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/services/service-structure-api.ts</code>
+            <code>src/app/interfaces/ApiServiceStructure.ts</code>
         </p>
 
 
@@ -312,18 +312,8 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface Endpoint {
-  route: string;
-  type: string;
-  isActive: boolean;
-}
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Entity } from &quot;./Entity&quot;;
 
-export interface Entity {
-  name: string;
-  isActive: boolean;
-  structure: any;
-  endpoints: Endpoint[];
-}
 
 export interface ApiServiceStructure {
   name: string;
@@ -331,18 +321,7 @@ export interface ApiServiceStructure {
   description: string;
   entities: Entity[];
 }
-
-export interface apiServiceShortStructure {
-  name: string;
-  isActive : boolean;
-  description: string;
-}
-
-export interface EntityShort {
-  name: string;
-  isActive: boolean;
-  structure: string;
-}</code></pre>
+</code></pre>
     </div>
 </div>
 
