--- a/ApiEasier.Frontend/documentation/interfaces/Endpoint.html
+++ b/ApiEasier.Frontend/documentation/interfaces/Endpoint.html
@@ -122,7 +122,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>src/app/services/service-structure-api.ts</code>
+            <code>src/app/interfaces/Endpoint.ts</code>
         </p>
 
 
@@ -278,32 +278,7 @@
   type: string;
   isActive: boolean;
 }
-
-export interface Entity {
-  name: string;
-  isActive: boolean;
-  structure: any;
-  endpoints: Endpoint[];
-}
-
-export interface ApiServiceStructure {
-  name: string;
-  isActive: boolean;
-  description: string;
-  entities: Entity[];
-}
-
-export interface apiServiceShortStructure {
-  name: string;
-  isActive : boolean;
-  description: string;
-}
-
-export interface EntityShort {
-  name: string;
-  isActive: boolean;
-  structure: string;
-}</code></pre>
+</code></pre>
     </div>
 </div>
 
